<resources>
    <string name="app_name">Agni</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="login_username">utilizador</string>
    <string name="login_password">palavra-passe</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_edit_profile">Edit profile</string>

    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>

    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password must contain a special character, a capital letter and contain between 6 and 30 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>

    <string name="error_password_does_not_match">Password does not match with password
    confirmation</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="user_types">
        <item>User</item>
        <item>Worker</item>
    </string-array>

    <string-array name="worker_types">
        <item>Civil Protection</item>
        <item>Firefighter</item>
    </string-array>

    <string name="forgotten_password">Forgot your password?</string>
    <string name="remember_credencials">Remember credentials</string>


    <string name="prompt_name">Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_locality">Locality</string>
    <string name="prompt_county">County</string>
    <string name="prompt_district">District</string>

    <string name="title_activity_home_page">Agni</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Profile info-->
    <string name="profile">Profile</string>
    <string name="profile_name">Name: </string>
    <string name="profile_email">Email: </string>
    <string name="profile_locality">Locality: </string>
    <string name="profile_county">County: </string>
    <string name="profile_district">District: </string>
    <string name="profile_likes">Likes: </string>
    <string name="profile_registers">Registers: </string>
    <string name="profile_comments">Comments: </string>


    <!--Occurrence info-->
    <string name="occurrence_title">Title:</string>
    <string name="occurrence_description">Occurrence description:</string>
    <string-array name="visibility_types">
        <item name="occurrence_public">Public</item>
        <item name="occurrence_private">Private</item>
    </string-array>

    <string name="occurrence_area">Area:</string>
    <string name="occurrence_public">Public</string>
    <string name="occurrence_private">Private</string>
    <string name="occurrence_severity">Severity:</string>
    <string name="occurrence_state">State:</string>
    <string name="state_open">Open</string>
    <string name="state_accepted">Accepted</string>
    <string name="state_concluded">Concluded</string>
    <string name="state_approved">Approved</string>
    <string name="state_resolved">Resolved</string>
    <string name="occurrence_notification">Notify when resolved:</string>
    <string name="occurrence_location">Location:</string>
    <string name="register_occurrence">Register occurrence</string>
    <string name="occurrence_type">Occurrence type:</string>
    <string name="occurrence_type_clean">Cleaning of woods</string>
    <string name="occurrence_type_zone">Difficult access</string>
    <string name="occurrence_type_other">Other</string>
    <string name="occurrence_likes">likes</string>
    <string name="choose_photo">Choose photo</string>
    <string name="accept">Accept</string>
    <string name="resolve">Resolve</string>

    <string name="map">Map</string>
    <string name="new_saved_location">Save location</string>
    <string name="save">Save</string>
    <string name="nameOfLocation">Name of the location to save</string>
    <string name="currentLocation">Current location</string>

    <string name="list_occurrences">List occurrences</string>

    <string name="statistics">Statistics</string>

    <string name="accepted_occurrences">Accepted Occurrences</string>

    <!--Filter menu-->
    <string name="minimum_level">Minimum severity:</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>

    <!--Comment section-->
    <string name="comments">Comments</string>
    <string name="insert_comment">Insert your comment</string>
    <string name="send_comment">Send</string>

    <string name="edit">Edit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_help_menu">HelpMenu</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="supported_occurrences">Supported occurrences</string>
    <string name="registered_occurrences">Registered occurrences</string>

    <string name="occurrence_details">Occurrence details</string>

    <string name="county">County</string>
    <string name="locality">Locality</string>
    <string name="district">District</string>

</resources>
