<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="25dp"
    android:paddingBottom="25dp"
    android:orientation="vertical"
    android:background="@android:color/darker_gray"
    android:alpha="0.9">

    <TextView
        android:layout_width="220dp"
        android:text="@string/minimum_level"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/minimum_level_rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2" />
        <RadioButton
            android:id="@+id/radio3"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3" />
        <RadioButton
            android:id="@+id/radio4"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4" />
        <RadioButton
            android:id="@+id/radio5"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/occurrence_type"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/cb_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/occurrence_type_clean" />

        <CheckBox
            android:id="@+id/cb_zone"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/occurrence_type_zone"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/cb_other"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/occurrence_type_other"
            android:checked="true"/>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply">
        </Button>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel">
        </Button>
    </LinearLayout>
</LinearLayout>